--- a/yaml_files/8cce78e3a2814276a8680226c01a8bc6.yml
+++ b/yaml_files/8cce78e3a2814276a8680226c01a8bc6.yml
@@ -1,27 +1,31 @@
 splice rules:
   phenomena: cmms_only
 phenomena:
-- DBZH:
-    long_name: 3D reflectivity composite
-- ZDR:
-   names: 3D ZDR composite
-- RHOHV: 
-   names: 3D Fisher-Z (arctanh) -transformed RHOHV composite
-- MAXDBZ:
-   names: 2D “column maximum”, derived from DBZH
-- VIL:
-   names: 2D Vertically Integrated Liquid water
-- TOP45: 
-   names: echo top heights (highest height level) for DBZH > 45
-- TOP18: 
-   names: echo top heights (highest height level) for DBZH > 18
-- POH:  
-   names: Probability of Hail; equal to f * ( TOP45 – height of T=0C isotherm )
-- VII:
-   names: Vertically Integrated Ice
-- CRIT_IND:  
-   names: (lightning) Criterion Index
+var_id: absolute_humidity
+long_name: Absolute Humidity
+- 3D reflectivity composite:
+   var_id: DBZH
+- 3D ZDR composite:
+   var_id: ZDR 
+- 3D Fisher-Z (arctanh) -transformed RHOHV composite:
+   var_id: RHOHV
+- 2D “column maximum”, derived from DBZH:
+   var_id: MAXDBZ
+- 2D Vertically Integrated Liquid water:
+   var_id: VIL
+- Echo top heights (highest height level) for DBZH > 45:
+   var_id: TOP45
+- Echo top heights (highest height level) for DBZH > 18:
+   var_id: TOP18
+- Probability of Hail; equal to f * ( TOP45 – height of T=0C isotherm ):
+   var_id: POH
+- Vertically Integrated Ice:
+   var_id: VII
+- (lightning) Criterion Index:
+   var_id: CRIT_IND
 - SHI
+   names: these are hail and lightning indices derived from formulae in Witt et al. (c. 1998)
 - POSH
+   names: these are hail and lightning indices derived from formulae in Witt et al. (c. 1998)
 - MEHS:
    names: these are hail and lightning indices derived from formulae in Witt et al. (c. 1998)
