--- a/yaml_files/8cce78e3a2814276a8680226c01a8bc6.yml
+++ b/yaml_files/8cce78e3a2814276a8680226c01a8bc6.yml
@@ -1,29 +1,42 @@
 splice rules:
   phenomena: cmms_only
 phenomena:
-- 3D reflectivity composite:
-   var_id: DBZH
-- 3D ZDR composite:
-   var_id: ZDR 
-- 3D Fisher-Z (arctanh) -transformed RHOHV composite:
-   var_id: RHOHV
-- 2D “column maximum”, derived from DBZH:
-   var_id: MAXDBZ
-- 2D Vertically Integrated Liquid water:
-   var_id: VIL
-- Echo top heights (highest height level) for DBZH > 45:
-   var_id: TOP45
-- Echo top heights (highest height level) for DBZH > 18:
-   var_id: TOP18
-- Probability of Hail; equal to f * ( TOP45 – height of T=0C isotherm ):
+- Severe Hail Index (2D), as defined in Witt et al. (1998):
+   units: J / m / s
+   var_id: SHI
+- Maximum Expected Hail Size (2D), as defined in Witt et al. (1998):
+   units: mm
+   var_id: MEHS
+- Probability of Hail (2D), as defined in Delobbe and Holleman (2006):
+   units: (fraction)
    var_id: POH
-- Vertically Integrated Ice:
+- Probability of Severe Hail (2D), as defined in Witt et al. (1998):
+   units: (fraction)
+   var_id: POSH
+- 3D Log horizontally polarised (corrected) reflectivity factor composite:
+   units: dBZ
+   var_id: DBZH
+- 3D Log differential reflectivity composite:
+   units: dB
+   var_id: ZDR
+- 3D Fisher-Z-transformed (arctanh) copolar correlation:
+   units: (unitless)
+   var_id: RHOHV
+- Vertically Integrated Liquid Water (2D), according to Greene and Clark (1972):
+   units: kg / m^2
+   var_id: VIL
+- Vertically Integrated Ice (2D), according to Mosier et al. (2011):
+   units: kg / m^2
    var_id: VII
-- (lightning) Criterion Index:
+- Lightning Criterion Index (2D), according to Haklander (2014):
+   units: (categorical)
    var_id: CRIT_IND
-- SHI:
-   names: these are hail and lightning indices derived from formulae in Witt et al. (c. 1998)
-- POSH:
-   names: these are hail and lightning indices derived from formulae in Witt et al. (c. 1998)
-- MEHS:
-   names: these are hail and lightning indices derived from formulae in Witt et al. (c. 1998)
+- Maximum DBZH reflectivity in vertical column (2D):
+   units: dBZ
+   var_id: MAXDBZ
+- Echo top (highest height level) for DBZH > 45 (2D):
+   units: m
+   var_id: TOP45
+- Echo top (highest height level) for DBZH > 18 (2D):
+   units: m
+   var_id: TOP18
