updated full example with new licenceURL

--- a/example_yaml/full_example.yml
+++ b/example_yaml/full_example.yml
@@ -57,4 +57,4 @@ accessRoles:
     - sting_jet
 
 # url to licence  
-licenceUrl: http://licences.ceda.ac.uk/image/data_access_condition/ukmo_agreement.pdf
+licenceUrl: https://artefacts.ceda.ac.uk/licences/specific_licences/ukmo_agreement.pdf
