adding in missing splice rules to yaml entries

--- a/yaml_files/7c114fc6e2884c1f9ca107e7a502fdbf.yml
+++ b/yaml_files/7c114fc6e2884c1f9ca107e7a502fdbf.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://licences.ceda.ac.uk/image/data_access_condition/esacci_landcover_terms_and_conditions.pdf
