--- a/yaml_files/0aec60da55ff46d794897760879acd48.yml
+++ b/yaml_files/0aec60da55ff46d794897760879acd48.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
