--- a/yaml_files/131bb6c7826b467d9f1ea6bd3fa74175.yml
+++ b/yaml_files/131bb6c7826b467d9f1ea6bd3fa74175.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
