--- a/yaml_files/1ed5a6870903426abef500c6bc060a37.yml
+++ b/yaml_files/1ed5a6870903426abef500c6bc060a37.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
