--- a/yaml_files/23ca9f2b5ed244ed931dd19566e04aac.yml
+++ b/yaml_files/23ca9f2b5ed244ed931dd19566e04aac.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
