--- a/yaml_files/2413d567033a4915bf1457c7b362c79b.yml
+++ b/yaml_files/2413d567033a4915bf1457c7b362c79b.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
