--- a/yaml_files/260df0db210143dcbecf3182e24817a3.yml
+++ b/yaml_files/260df0db210143dcbecf3182e24817a3.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
