--- a/yaml_files/2b27641b9bfe4d5ba9f9e91e6f684616.yml
+++ b/yaml_files/2b27641b9bfe4d5ba9f9e91e6f684616.yml
@@ -1,3 +1,5 @@
-# one of: public|registered|restricted
+splice rules:
+  accessType: default
+  licenceUrl: default# one of: public|registered|restricted
 accessType: public
 licenceUrl: http://licences.ceda.ac.uk/image/data_access_condition/esacci_seaice_terms_and_conditions.pdf
