--- a/yaml_files/2c0bb6679e4f4a0ba1bc254167b171d8.yml
+++ b/yaml_files/2c0bb6679e4f4a0ba1bc254167b171d8.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
