--- a/yaml_files/3913c555e3054ffa99eb494a1c0bb39d.yml
+++ b/yaml_files/3913c555e3054ffa99eb494a1c0bb39d.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
