--- a/yaml_files/3922e45b2d764ae196cb06a941e1beb7.yml
+++ b/yaml_files/3922e45b2d764ae196cb06a941e1beb7.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
