--- a/yaml_files/4f1777eefb514ab9a9b293e4cc0dda0c.yml
+++ b/yaml_files/4f1777eefb514ab9a9b293e4cc0dda0c.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
