--- a/yaml_files/4f314945d3944aeaa12f819fe801dea0.yml
+++ b/yaml_files/4f314945d3944aeaa12f819fe801dea0.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
