--- a/yaml_files/5116f09e13c84454888fd0e2466352ec.yml
+++ b/yaml_files/5116f09e13c84454888fd0e2466352ec.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
