--- a/yaml_files/54988e5b7aff4e929ac02e73f3c777ca.yml
+++ b/yaml_files/54988e5b7aff4e929ac02e73f3c777ca.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
