--- a/yaml_files/590adf7dbf6c4525bbcbbb08623d1e05.yml
+++ b/yaml_files/590adf7dbf6c4525bbcbbb08623d1e05.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
