--- a/yaml_files/5f8d2c32121a4885b20be2ae96aed72d.yml
+++ b/yaml_files/5f8d2c32121a4885b20be2ae96aed72d.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
