--- a/yaml_files/66486d43646c4f9db8bbde0efe1694ab.yml
+++ b/yaml_files/66486d43646c4f9db8bbde0efe1694ab.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
