--- a/yaml_files/676d7fef735b49d5926d3a38fc239d09.yml
+++ b/yaml_files/676d7fef735b49d5926d3a38fc239d09.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
