--- a/yaml_files/6a7935465d374c7a9eac70c046f4cfcb.yml
+++ b/yaml_files/6a7935465d374c7a9eac70c046f4cfcb.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
