--- a/yaml_files/6ca85a41897244d2bc952c869091187d.yml
+++ b/yaml_files/6ca85a41897244d2bc952c869091187d.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
