--- a/yaml_files/6e3e699fa0d3479b96dd990c0ce417ba.yml
+++ b/yaml_files/6e3e699fa0d3479b96dd990c0ce417ba.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
