--- a/yaml_files/6fcc9d2c792243c1bb99de9c3cfdef2f.yml
+++ b/yaml_files/6fcc9d2c792243c1bb99de9c3cfdef2f.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: https://github.com/IPCC-WG1/Chapter-7/blob/main/LICENSE
