--- a/yaml_files/6fef2353826b47c3bebbc30fd036552c.yml
+++ b/yaml_files/6fef2353826b47c3bebbc30fd036552c.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
