--- a/yaml_files/70c57074146147989150a1a37c338fcf.yml
+++ b/yaml_files/70c57074146147989150a1a37c338fcf.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
