--- a/yaml_files/710ec325988347e5bff6499c04b4beb8.yml
+++ b/yaml_files/710ec325988347e5bff6499c04b4beb8.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
