--- a/yaml_files/7464dd2803774dbbb21bd97fddccaa39.yml
+++ b/yaml_files/7464dd2803774dbbb21bd97fddccaa39.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
