--- a/yaml_files/789ad030299342ea99534edfb62450d9.yml
+++ b/yaml_files/789ad030299342ea99534edfb62450d9.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
