--- a/yaml_files/81784e3642bd465aa69c7fd40ffe1b1b.yml
+++ b/yaml_files/81784e3642bd465aa69c7fd40ffe1b1b.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: https://www.ecad.eu/documents/ECAD_datapolicy.pdf
