--- a/yaml_files/85168bf5e6ee4733b8f9d486890148f6.yml
+++ b/yaml_files/85168bf5e6ee4733b8f9d486890148f6.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
