--- a/yaml_files/87e8b101187643d382dc2c01277bd193.yml
+++ b/yaml_files/87e8b101187643d382dc2c01277bd193.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
