--- a/yaml_files/89e1b69ad74146cfa8b0a941108811c2.yml
+++ b/yaml_files/89e1b69ad74146cfa8b0a941108811c2.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
