--- a/yaml_files/8e0b3004ed5a4b45b7b0538347b5c85a.yml
+++ b/yaml_files/8e0b3004ed5a4b45b7b0538347b5c85a.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
