--- a/yaml_files/980a7c11d834455eb75752fdf7830719.yml
+++ b/yaml_files/980a7c11d834455eb75752fdf7830719.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
