--- a/yaml_files/ab9bf1524e134398b693f09b5199412b.yml
+++ b/yaml_files/ab9bf1524e134398b693f09b5199412b.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
