--- a/yaml_files/afed8436512e4bc1b02320e18132815f.yml
+++ b/yaml_files/afed8436512e4bc1b02320e18132815f.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
