--- a/yaml_files/b140e520e22e45daa8525d18c1c8cced.yml
+++ b/yaml_files/b140e520e22e45daa8525d18c1c8cced.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
