--- a/yaml_files/b2670fb9d6e14733b303865c85c2065d.yml
+++ b/yaml_files/b2670fb9d6e14733b303865c85c2065d.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: https://www.ecad.eu/documents/ECAD_datapolicy.pdf
