--- a/yaml_files/b57ed5886f0a4041b76f2281ba503bed.yml
+++ b/yaml_files/b57ed5886f0a4041b76f2281ba503bed.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
