--- a/yaml_files/b9bae3ebc72643b0a91396064097bf74.yml
+++ b/yaml_files/b9bae3ebc72643b0a91396064097bf74.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
