--- a/yaml_files/b9d3cd0654be4360b295e0e277897d4c.yml
+++ b/yaml_files/b9d3cd0654be4360b295e0e277897d4c.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
