--- a/yaml_files/bb671075bd194b3bbaa496d90f5310e1.yml
+++ b/yaml_files/bb671075bd194b3bbaa496d90f5310e1.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
