--- a/yaml_files/bd83322fc85e4a58a08ae19f298a0ac2.yml
+++ b/yaml_files/bd83322fc85e4a58a08ae19f298a0ac2.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: registered
 licenceUrl: http://www.ukssdc.ac.uk/cgi-bin/wdcc1/userreg.pl
