--- a/yaml_files/c57d3e07c72249c38fe6b019924119d5.yml
+++ b/yaml_files/c57d3e07c72249c38fe6b019924119d5.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
