--- a/yaml_files/c79b18c2fcdf41ada4b8e1562bea7411.yml
+++ b/yaml_files/c79b18c2fcdf41ada4b8e1562bea7411.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
