--- a/yaml_files/cf7bbe0b427e497084a80dd313630c3f.yml
+++ b/yaml_files/cf7bbe0b427e497084a80dd313630c3f.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
