--- a/yaml_files/da2cbd8729374098b2beae671bf6d072.yml
+++ b/yaml_files/da2cbd8729374098b2beae671bf6d072.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
