--- a/yaml_files/db756b9651da4e11b9ca2a0c3cce64b1.yml
+++ b/yaml_files/db756b9651da4e11b9ca2a0c3cce64b1.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
