--- a/yaml_files/dc8c9a1dfba24a0187e22740404385fd.yml
+++ b/yaml_files/dc8c9a1dfba24a0187e22740404385fd.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
