--- a/yaml_files/e68742b4c4724559b704b29a15981c76.yml
+++ b/yaml_files/e68742b4c4724559b704b29a15981c76.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
