--- a/yaml_files/e80f28ccb0504c32b403eee654a8a5b3.yml
+++ b/yaml_files/e80f28ccb0504c32b403eee654a8a5b3.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://licences.ceda.ac.uk/image/data_access_condition/esacci_landcover_terms_and_conditions.pdf
