--- a/yaml_files/f2bd3cf541b24177bfc33dc0dc48695d.yml
+++ b/yaml_files/f2bd3cf541b24177bfc33dc0dc48695d.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: http://creativecommons.org/licenses/by/4.0/
