--- a/yaml_files/fab3d1d8abce46f6a53270b0b48a9312.yml
+++ b/yaml_files/fab3d1d8abce46f6a53270b0b48a9312.yml
@@ -1,4 +1,6 @@
-
+splice rules:
+  accessType: default
+  licenceUrl: default
 # one of: public|registered|restricted
 accessType: public
 licenceUrl: https://www.eumetsat.int/data-policy/eumetsat-data-policy.pdf
